Update ShadowManager